--- a/src/Components/Editor/editor.css
+++ b/src/Components/Editor/editor.css
@@ -1,16 +1,35 @@
 #editor {
-    height: 80vh;
+    height: 65vh;
     outline: none;
     font-size: 1.3em;
     padding: 20px;
-    background-color: gainsboro;
-    border: none;
-    border-radius: 5px;
+    padding-bottom: 30px;
+    background-color: white;
+    border: black solid 1px;
+    border-radius:  0 0 5px 5px;
     width: 700px;
+    display: block;
 }
 
-h2 {
-    text-shadow: 1px 1px gray;
-    font-weight: bolder;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+
+#title {
+    width: 700px;
+    text-align: start;
+    padding: 10px 20px;
+    background-color: orange;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: 1.2em;
+    border-radius:  5px 5px 0 0;
+    border: black solid 1px;
+    border-bottom: none;
+}
+
+@media(max-width: 800px){
+
+    #editor{
+        width: 400px;
+        margin-bottom: 10px;
+        display: inline-block;
+    }
 }
