--- a/src/App.css
+++ b/src/App.css
@@ -4,11 +4,7 @@
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-  background-image: url("https://www.xmple.com/wallpaper/white-orange-gradient-linear-1920x1080-c2-ffffff-ffa500-a-90-f-14.svg");
-  border: solid orange 1px;
   position: relative;
-  background-repeat: no-repeat;
-  background-size: cover;
 }
 
 
@@ -22,7 +18,7 @@
   justify-content: space-evenly;
 }
 
-h1 {
+#heaeder {
  
   font-weight: bolder;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
